# argon

./: .gitignore  CMakeLists.txt  README.md  argon.cpp  argon.hpp
cmake/: ArgonConfig.cmake.in
docs/: arguments.md  cli.md  commands.md  constraints.md  subcommands.md
examples/: CMakeLists.txt  subcommands_test.cpp  test.cpp
include/Argon/: AddableToContext.hpp  Ast.hpp  AstBuilder.hpp  Constraints.hpp  Context.hpp  ContextFlagCollector.hpp  ContextView.hpp  Error.hpp  Flag.hpp  HelpMessage.hpp  IClone.hpp  NewAst.hpp  NewAstBuilder.hpp  NewContext.hpp  NewContextValidator.hpp  Parser.hpp  PathBuilder.hpp  Scanner.hpp  StringUtil.hpp  Traits.hpp
include/Argon/Cli/: Cli.hpp  CliErrors.hpp  CliLayer.hpp  DefaultCommand.hpp  ISubcommand.hpp  SubcommandPath.hpp  Subcommands.hpp
include/Argon/Config/: AddableToConfig.hpp  Config.hpp  ConfigHelpers.hpp  ContextConfig.hpp  ContextConfigForwarder.hpp  OptionConfig.hpp  Types.hpp
include/Argon/Constraints/: ConstraintErrorMsg.hpp  ConstraintValidator.hpp  Dependency.hpp  Exclusion.hpp  NewConstraints.hpp  Requirement.hpp
include/Argon/Options/: IsMultiPositional.hpp  MultiOption.hpp  MultiPositional.hpp  NewIOptionChar.hpp  NewIOptionNumber.hpp  NewMultiOption.hpp  NewMultiPositional.hpp  NewOption.hpp  NewOptionDescription.hpp  NewOptionGroup.hpp  NewOptionTypeExtensions.hpp  NewPositional.hpp  NewPositionalDescription.hpp  NewSetValue.hpp  Option.hpp  OptionCharBase.hpp  OptionGroup.hpp  OptionHolder.hpp  Positional.hpp  SetValue.hpp
include/argon/: argon.hpp
tests/: CMakeLists.txt  ConstraintsTest.cpp  ErrorTestFunctions.hpp  ErrorTests.cpp  MultiOptionTests.cpp  OptionGroupTests.cpp  OptionsTest.cpp  PositionalTests.cpp  TypeAnalysisTests.cpp  argon.cpp
tests/arguments/: choices.cpp  flags.cpp  multi-choices.cpp  multi-flags.cpp  multi-positionals.cpp  positionals.cpp
tests/config-tests/: Bounds.cpp  CharModeTests.cpp  ConversionFn.cpp  FlagPrefixes.cpp
tests/configuration/: with_alias.cpp  with_default.cpp  with_implicit.cpp
tests/constraint-tests/: Dependency.cpp  Exclusion.cpp  Requirement.cpp
tests/constraints/: absent.cpp  at-least.cpp  at-most.cpp  condition.cpp  exactly.cpp  operators.cpp  present.cpp  when.cpp
tests/error-tests/: CharAnalysis.cpp  CustomType.cpp  FlagSyntax.cpp  IntegerAnalysis.cpp  OptionGroupSyntax.cpp  PositionalAnalysis.cpp
tests/errors/: analysis_errors.cpp  conversion_failures.cpp  library_misuse.cpp
tests/helpers/: cli.hpp  cli_test_helpers.hpp  strings.hpp  types.hpp
tests/option-tests/: MultiOptionTests.cpp  OptionGroupTests.cpp  OptionTests.cpp  PositionalTests.cpp
tests/subcommands/: subcommands.cpp
tests/types/: builtin_types.cpp  custom_types.cpp
tests/validation/: with_group_validator.cpp  with_value_validator.cpp
